# printburn-monitor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FEATURE_PROGRESS.md  PROJECT_FILES.md  README.md  TROUBLESHOOTING.md  findings.md  progress.md  task_plan.md
.claude/sessions/: 2026-03-23-2030-ac557505-1ee9-4eba-b847-d4a5977f0297.md  2026-03-23-2128-ac557505-1ee9-4eba-b847-d4a5977f0297.md  2026-03-23-2223-2db90922-b160-4026-89c1-095efa0e7250.md  2026-03-24-1058-da66d2b5-8600-46a3-af13-3f7102ef6189.md  2026-03-24-1351-aba6a3a6-0602-46b9-9b02-dbc472dda416.md  2026-03-24-1429-6f9f9911-0bcc-4367-8329-cb6b38d81e13.md  2026-03-24-1628-5051ff40-55db-4791-8583-14f298b971f3.md
.github/workflows/: build.yml
deploy/windows/: LICENSE.txt  app.manifest  app.rc  build_installer.bat  build_installer.ps1  installer.nsi
docs/: DEPLOYMENT_GUIDE.md  USER_MANUAL.md
include/: IPlugin.h  qt_compat.h
installer/: windows_installer.nsi
installer/debian/: control
installer/linux/: build_package.sh
models/: approver_config_model.h  barcode_config_model.h  department_model.h  device_model.h  proxy_approver_model.h  role_model.h  security_level_model.h  serial_number_config_model.h  task_model.h  user_model.h
scripts/: init_db.sql  static_check.sh
src/common/: PluginManager.cpp  PluginManager.h
src/common/repository/: approver_config_repository.cpp  approver_config_repository.h  database_manager.cpp  database_manager.h  department_repository.cpp  department_repository.h  device_repository.cpp  device_repository.h  proxy_approver_repository.cpp  proxy_approver_repository.h  role_repository.cpp  role_repository.h  security_level_repository.cpp  security_level_repository.h  serial_number_config_repository.cpp  serial_number_config_repository.h  task_repository.cpp  task_repository.h  user_repository.cpp  user_repository.h
src/main/: main.cpp
src/plugins/: CMakeLists.txt
src/plugins/approval/: ApprovalPlugin.cpp  ApprovalPlugin.h  CMakeLists.txt
src/plugins/client/: CMakeLists.txt  ClientPlugin.cpp  ClientPlugin.h
src/plugins/security/: CMakeLists.txt  SecurityPlugin.cpp  SecurityPlugin.h
src/plugins/task/: CMakeLists.txt  TaskPlugin.cpp  TaskPlugin.h
src/services/: ApproverConfigService.cpp  ApproverConfigService.h  AuthService.cpp  AuthService.h  BarcodeService.cpp  BarcodeService.h  BurnExecutor.cpp  BurnExecutor.h  DeviceManagementService.cpp  DeviceManagementService.h  FileEncryptionService.cpp  FileEncryptionService.h  LogAuditService.cpp  LogAuditService.h  PrintExecutor.cpp  PrintExecutor.h  ProxyApproverService.cpp  ProxyApproverService.h  RoleManagementService.cpp  RoleManagementService.h  SecurityLevelService.cpp  SecurityLevelService.h  SensitiveWordsService.cpp  SensitiveWordsService.h  SerialNumberService.cpp  SerialNumberService.h  TaskService.cpp  TaskService.h  UserManagementService.cpp  UserManagementService.h
src/ui/: ApproverConfigPage.cpp  ApproverConfigPage.h  BarcodeConfigPage.cpp  BarcodeConfigPage.h  BurnApplicationPage.cpp  BurnApplicationPage.h  BurnOutputPage.cpp  BurnOutputPage.h  DepartmentManagementPage.cpp  DepartmentManagementPage.h  DeviceManagementPage.cpp  DeviceManagementPage.h  LoginLogPage.cpp  LoginLogPage.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  OperationLogPage.cpp  OperationLogPage.h  PersonalHomePage.cpp  PersonalHomePage.h  PrintApplicationPage.cpp  PrintApplicationPage.h  PrintOutputPage.cpp  PrintOutputPage.h  ProxyApproverConfigPage.cpp  ProxyApproverConfigPage.h  RoleManagementPage.cpp  RoleManagementPage.h  SecurityLevelConfigPage.cpp  SecurityLevelConfigPage.h  SecurityPolicyConfigPage.cpp  SecurityPolicyConfigPage.h  SerialNumberConfigPage.cpp  SerialNumberConfigPage.h  SystemManagementPage.cpp  SystemManagementPage.h  TaskApprovalPage.cpp  TaskApprovalPage.h  (+2 more)
tests/: CMakeLists.txt  TestAuthService.cpp  TestAuthService.h  TestPermission.cpp  test_database.cpp
